@@ -1,3 +1,7 @@
+Sat Mar 15 12:20:36 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sat Mar 15 12:18:52 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
